package com.chantal.exo4new;

import java.util.List;

public interface Cli {

    List<Option> addOption(Option option);
    void addAction();





}
