package com.chantal.exo6;

public enum Mode { PLEINE, CREUSE };